examples/negative/actor_row/receive_no_actor_row.kai
# Negative fixture (#511 / actor row contract): `Actor.receive`
# without an `Actor[Msg]` row must be rejected. The receive's
# return type alone is not enough to infer the row — it must be
# explicit.

import actor

type Msg = M(Int)

fn recv_one() : Msg = Actor.receive()

fn main() : Int / Console = 0
